<resources>
    <string name="internet_required">Internet access is required.</string>

    <string name="app_name">Study Buddy</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="edit">Edit</string>
    <string name="_4">4</string>
    <string name="csd">CSD</string>
    <string name="chadmaximus_googly_com_us">ChadMaximus@googly.com.us</string>
    <string name="select">Select Item</string>
    <string name="eventname">Library Study Group</string>
    <string name="eventdesc">Hi looking for peeps to study at SUTD Library today! Anyone available?</string>
    <string name="eventcreator">Lim Sheng Xiang, Term 4 CSD</string>
    <string name="date">Today</string>
    <string name="start_time">Start: 1200</string>
    <string name="end_time">End: 1400</string>
    <string name="location">SUTD Library</string>
    <string name="information">50.001</string>
    <string name="no_of_ppl">Study Buddies Present: 3/5</string>
    <string name="name1">Lim Sheng Xiang</string>
    <string name="name2">Nigel Mun</string>
    <string name="name3">Vernon Toh</string>
    <string name="join">JOIN!</string>
    <string name="select_modules">Select Module</string>

    <!--    Used for accessing to camera/gallery for images -->
    <string name="camera_access">Camera access is required</string>
    <string name="storage_access">Storage access is required.</string>
    <string name="set_image_button">Select image</string>

    <!-- Profile Page & Edit Profile Page -->
    <string name="profile_page">Profile Page</string>
    <string name="user_name">Giga Chad</string>
    <string name="user_pillar">CSD</string>
    <string name="user_term">4</string>
    <string name="modules">Modules</string>
    <string name="user_bio">Hello everyone this is lorem ipsum. I am a handsome GIGA CHAD</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="confirm">Confirm</string>
    <string name="pillar">Pillar</string>

    <!--    Filter Activity Page -->
    <string name="filter">Filter</string>

    <!-- Create Event & Edit Event -->
    <string name="create_event_title">Create an event</string>
    <string name="select_image">Select Image</string>
    <string name="event_name">Name</string>
    <string name="event_description">Description</string>
    <string name="event_venue">Venue</string>
    <string name="event_module">Module</string>
    <string name="event_capacity">Capacity</string>
    <string name="event_start_date_time">Start</string>
    <string name="event_end_date_time">End</string>
    <string name="create_event">Create Event</string>

    <string name="edit_event_title">Edit your event</string>
    <string name="edit_event">Edit Event</string>
    <string name="module">Module</string>
    <string name="term">Term</string>
    <string name="bio">Bio</string>

</resources>