<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">
<!---Icon-->
    <!---Login word-->
    <!---Username bar, relative layout-->
    <ImageView
        android:id="@+id/icon"
        android:layout_width="113dp"
        android:layout_height="127dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/login_word"
        android:layout_width="63dp"
        android:layout_height="33dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/login"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/login_bar"
        android:drawableStart="@drawable/ic_baseline_perm_identity_24"
        android:drawablePadding="20dp"
        android:hint="Email"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_word" />


<!---Password bar, relative layout 2-->
    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/login_bar"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:padding="10dp"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="122dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/sign_in_bar"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:text="@string/sign_up_here"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />


</androidx.constraintlayout.widget.ConstraintLayout>